some warning fixed